k8s-deploy/dictionary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dictionary-server
  namespace: dictionary-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dictionary-server
  template:
    metadata:
      labels:
        app: dictionary-server
    spec:
      containers:
      - name: server
        image: localhost:32000/dictionary-server
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
