k8s-deploy/varnish-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: varnish-ingress
  namespace: dictionary-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "10.21.14.144.xip.io"
      http:
        paths:
          - backend:
              serviceName: varnish-service
              servicePort: 80
            path: /search/(.*)
